--- a/projects/kbtv-client/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
@@ -1,33 +1,29 @@
+<mat-toolbar fxLayout="column" fxLayoutAlign="center stretch" class="mb-4 mt-4">
 
-  <mat-toolbar fxLayout="column" fxLayoutAlign="center stretch" class="mb-4 mt-4">
+  <ng-container *ngIf="config.isOnline else offlineHeader">
+    <span class="mat-small color-accent ellipsis"> Tilkoblet internett</span>
+  </ng-container>
+  <ng-template #offlineHeader>
+    <span class="mat-small color-warn ellipsis">Frakoblet internett</span>
+  </ng-template>
 
-    <ng-container *ngIf="config.isOnline else offlineHeader">
-      <span class="mat-small color-accent ellipsis"> Tilkoblet internett</span>
-    </ng-container>
-    <ng-template #offlineHeader>
-      <span class="mat-small color-warn ellipsis">Frakoblet internett</span>
-    </ng-template>
+  <span class="mat-subheading-1 ellipsis" *ngIf="config.user" style="margin:0;">
+    {{ config.user.firstName }} {{ config.user.lastName }}
+  </span>
 
-    <span class="mat-subheading-1 ellipsis" *ngIf="config.user" style="margin:0;">
-      {{ config.user.firstName }} {{ config.user.lastName }}
-    </span>
+  <span class="mat-small ellipsis" *ngIf="config.user">
+    Sist synkronisert {{ config.syncTimestamp | date : 'shortTime'}}
+  </span>
 
-    <span class="mat-small ellipsis" *ngIf="config.user">
-      Sist synkronisert {{ config.syncTimestamp | date : 'shortTime'}}
-    </span>
+</mat-toolbar>
 
-  </mat-toolbar>
+<mat-divider></mat-divider>
 
-  <mat-divider></mat-divider>
+<div class="nav-list">
+  <ng-container *ngFor="let navButton of config.navigations">
 
-  <div class="nav-list">
-    <ng-container *ngFor="let navButton of config.navigations">
-      <app-nav-item 
-        [navButton]="navButton"
-        (hasNavigated)="onNavClick()">
-      </app-nav-item>  
- 
-    </ng-container>
-  </div>
+    <app-nav-item [navButton]="navButton" (hasNavigated)="onNavClick()">
+    </app-nav-item>
 
-
+  </ng-container>
+</div>
