remove old prop count on filter icon

--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -23,7 +23,7 @@
 
     <app-bottom-action-bar bottombar
       [fab]="actionFab" 
-      [actions]="vm.bottomActions">
+      [actions]="bottomActions">
     </app-bottom-action-bar>
 
   </app-main-skeleton>
