remove flex layout from list item to improve perf

--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
@@ -3,13 +3,18 @@
     <cdk-virtual-scroll-viewport *ngIf="missions?.length; else noContent"
         itemSize="56" maxBufferPx="800" minBufferPx="800" class="h-100"
         appScrollNavElevationToggler>
+
         <ng-container *cdkVirtualFor="let mission of missions; trackBy: trackByFn;" >
+
             <app-list-item [routerLink]="[mission.id, 'detaljer']">
                 <mat-icon left-side>home_work</mat-icon>
-                <span fxHide.xs>{{'(' + mission.id + ') '}}</span>{{ mission.address }}
+                {{ mission.address }}
             </app-list-item>
+
             <mat-divider></mat-divider>
+
         </ng-container>
+        
     </cdk-virtual-scroll-viewport>
 
 </div>
