--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/note-item/note-item.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/note-item/note-item.component.html
@@ -1,15 +1,27 @@
+<style>
+    .note-content{
+        width:100%;
+        flex-direction: row;
+        box-sizing: border-box;
+        display: flex;
+        place-content: center space-between;
+        align-items: center;
+    }
+</style>
 <div class="p-4 bg-card" *ngIf="note">
+
     <div *ngIf="note.title" class="mat-title">{{ note.title }}</div>
     <div class="mat-body">{{ note.content }}</div>
-    <div class="w-100" fxLayout="row" fxLayoutAlign="space-between center">
+
+    <div class="note-content">
         <span class="mat-caption">
             {{ note.updatedAt | date: 'dd.MMM yyyy' }} {{ note.createdBy ? ("av " + note.createdBy) : "" }}
         </span>
 
         
-        <button *ifRole="can.update" (tap)="editNote()" mat-button color="accent"
-            aria-label="Rediger notat">
+        <button *ifRole="can.update" (tap)="editNote()" mat-button color="accent" aria-label="Rediger notat">
             Oppdater
         </button>       
-    </div>        
+    </div>  
+
 </div>
