--- a/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.html
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.html
@@ -12,9 +12,9 @@
 
   </mat-sidenav>
 
-  <mat-sidenav-content fxLayout="column">
+  <mat-sidenav-content>
 
-    <div fxFlex fxLayout="row">   
+    <div>   
         <router-outlet #outlet="outlet"></router-outlet>    
     </div>
 
