--- a/projects/kbtv-client/src/app/home/home-header/home-header.component.html
+++ b/projects/kbtv-client/src/app/home/home-header/home-header.component.html
@@ -1,13 +1,18 @@
 <style>
     mat-toolbar{
         background: #006064;  /* fallback for old browsers */
-      background: linear-gradient(to top, #006064, #314755)!important;
-      color:white;
+        background: linear-gradient(to top, #006064, #314755)!important;
+        color:white;
+        height: 30vh;
+        padding-bottom: 26px;
+        flex-direction: column;
+        box-sizing: border-box;
+        display: flex;
+        place-content: center;
+        align-items: center;
     }
 </style>
-<mat-toolbar
-    *ngIf="vm$ | async; let vm"  
-    fxLayout="column" fxLayoutAlign="center center" style="height:30vh;padding-bottom:26px">
+<mat-toolbar *ngIf="vm$ | async; let vm">
   
     <h2>{{ vm.currentUser.firstName + ' ' + vm.currentUser.lastName }}</h2>
     <span class="mat-caption">Sist synkronisert {{ vm.syncTimestamp | date : 	'd.MMM  kl. H:mm'}}</span> 
