add null value for mission

--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/shared-timesheet/components/timesheet-list-item-content/timesheet-list-item-content.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/shared-timesheet/components/timesheet-list-item-content/timesheet-list-item-content.component.html
@@ -5,7 +5,7 @@
     {{ timesheet.startTime | date : 'shortTime' }} - {{ timesheet.endTime | date : 'shortTime' }}
   </div>
   <div class="mat-body ellipsis">
-    {{ timesheet.mission?.address }}
+    {{ timesheet.mission?.address || 'Finner ikke oppdrag' }}
   </div>
   <div class="mat-small ellipsis">
     {{ timesheet.comment }}
