switch from tap to click on nav bar buttons to fix tap overlay  bug

--- a/projects/form-sheet/src/lib/form-sheet-nav-bar/form-sheet-nav-bar.component.html
+++ b/projects/form-sheet/src/lib/form-sheet-nav-bar/form-sheet-nav-bar.component.html
@@ -21,7 +21,7 @@
     <button mat-icon-button *ngFor="let button of config.buttons || []"
         [color]="button.color"
         [attr.aria-label]="button.aria"
-        (tap)="handleCallback(button.callback)">
+        (click)="handleCallback(button.callback)">
         <mat-icon>{{ button.icon }}</mat-icon>
     </button>
 
