fix overlapping mat dividers

--- a/projects/kbtv-client/src/app/feature-modules/request-log/request-log/completed-request-log-list/completed-request-log-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/request-log/request-log/completed-request-log-list/completed-request-log-list.component.html
@@ -2,7 +2,7 @@
 
 <div class="mat-body ml-5 mb-3" *ngIf="!requests?.length">Ingen aktiviteter fullført</div>
 
-<ng-container *ngFor="let req of requests || []; trackBy: trackByReq">
+<ng-container *ngFor="let req of requests || []; trackBy: trackByReq; let i = index">
 
     <app-list-item rippleDisabled=true>
 
