--- a/projects/kbtv-client/src/app/feature-modules/request-log/request-log/failed-request-log-list/failed-request-log-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/request-log/request-log/failed-request-log-list/failed-request-log-list.component.html
@@ -2,7 +2,7 @@
 
 <div class="mat-body ml-5 mb-3" *ngIf="!requests?.length">Ingen aktiviteter mislykket</div>
 
-<ng-container *ngFor="let req of requests || []; trackBy: trackByReq">
+<ng-container *ngFor="let req of requests || []; trackBy: trackByReq; let i = index">
 
     <app-list-item rippleDisabled=true>
 
@@ -14,6 +14,6 @@
 
     </app-list-item>
 
-    <mat-divider inset=true></mat-divider>
+    <mat-divider inset=true *ngIf="i !== (requests.length - 1)"></mat-divider>
 
 </ng-container>
