add createdAt prop to models & remove updatedAt,

--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/note-item/note-item.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/note-item/note-item.component.html
@@ -15,7 +15,7 @@
 
     <div class="note-content">
         <span class="mat-caption">
-            {{ note.updatedAt | date: 'dd.MMM yyyy' }} {{ note.createdBy ? ("av " + note.createdBy) : "" }}
+            {{ note.createdAt | date: 'dd.MMM yyyy' }} {{ note.createdBy ? ("av " + note.createdBy) : "" }}
         </span>
 
         
