--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
@@ -9,7 +9,7 @@
                 <mat-icon left-side [svgIcon]="doc.fileName | fileExtension | fileExtensionIcon"></mat-icon>
                 <div class="ellipsis">{{ doc.name }}</div>  
                 <div class="mat-caption">Filtype: {{ doc.fileName | fileExtension | uppercase }}</div>
-                <div class="mat-caption">Lastet opp {{ doc.updatedAt | date : 'dd.MMM yyyy' }}</div>
+                <div class="mat-caption">Lastet opp {{ doc.createdAt | date : 'dd.MMM yyyy' }}</div>
                 <span right-side class="color-accent">Last ned</span>
             </app-list-item>
             <mat-divider></mat-divider>
