use fetching model content

--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
@@ -20,5 +20,5 @@
 </div>
 
 <ng-template #noContent>
-    <app-no-content text="Fant ingen oppdrag"></app-no-content>
+    <app-no-content>Fant ingen oppdrag</app-no-content>
 </ng-template>
