--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list-view/user-timesheet-list-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list-view/user-timesheet-list-view.component.html
@@ -22,8 +22,7 @@
 </div> 
 
 <ng-template #noContent>
-    <app-no-content
-        text="Finner ingen timer med gitte filtre." 
-        [buttonInfo]="filterButton"> 
+    <app-no-content [buttonInfo]="filterButton">
+        Finner ingen timer med gitte filtre.
     </app-no-content>
 </ng-template>
