add loading text to statistic table

--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic-table/timesheet-statistic-table.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic-table/timesheet-statistic-table.component.html
@@ -3,9 +3,8 @@
     rowSelection="multiple"
     suppressRowClickSelection="true"
     suppressColumnVirtualisation="true"
-    overlayNoRowsTemplate="Tomt"
+    [overlayNoRowsTemplate]="overlayNoRowsTemplate"
     (modelUpdated)="autoSizeGrid()"
     [rowData]="rowData"
-    [columnDefs]="columnDefs"
-    [allowContextMenuWithControlKey]>
+    [columnDefs]="columnDefs">
 </ag-grid-angular>
